@@ -1,15 +1,15 @@
 unclosed_verb_line_commands.texi:36: Next reference to nonexistent `@verb{nodesub@ '
 unclosed_verb_line_commands.texi:34: warning: unreferenced node `@verb{nodesub@ ,next,,Top'
-unclosed_verb_line_commands.texi:6: @verb missing close brace
-unclosed_verb_line_commands.texi:34: @verb missing close brace
-unclosed_verb_line_commands.texi:7: @verb missing close brace
-unclosed_verb_line_commands.texi:4: @verb missing close brace
+unclosed_verb_line_commands.texi:6: @verb missing closing delimiter sequence: T}
+unclosed_verb_line_commands.texi:34: @verb missing closing delimiter sequence: n}
+unclosed_verb_line_commands.texi:7: @verb missing closing delimiter sequence: t}
+unclosed_verb_line_commands.texi:4: @verb missing closing delimiter sequence: S}
 unclosed_verb_line_commands.texi:10: Misplaced {
 unclosed_verb_line_commands.texi:11: Misplaced {
 unclosed_verb_line_commands.texi:12: Menu reference to nonexistent node `nodesub@ '
 unclosed_verb_line_commands.texi:20: Misplaced {
 unclosed_verb_line_commands.texi:21: Misplaced {
-unclosed_verb_line_commands.texi:24: @verb missing close brace
-unclosed_verb_line_commands.texi:28: @verb missing close brace
+unclosed_verb_line_commands.texi:24: @verb missing closing delimiter sequence: T}
+unclosed_verb_line_commands.texi:28: @verb missing closing delimiter sequence: T}
 unclosed_verb_line_commands.texi:28: warning: Requested float type `@verb{Text @ @c listoffloats' not previously used
-unclosed_verb_line_commands.texi:30: @verb missing close brace
+unclosed_verb_line_commands.texi:30: @verb missing closing delimiter sequence: e}
