@@ -1,2 +1,2 @@
-verb_and_char_end_of_line.texi:5: @verb missing close brace
+verb_and_char_end_of_line.texi:5: @verb missing closing delimiter sequence: *}
 verb_and_char_end_of_line.texi:20: @verb missing close brace
