@@ -1,2 +1,2 @@
 warning: Must specify a title with a title command or @top
-verb_not_closed.texi:11: @verb missing close brace
+verb_not_closed.texi:11: @verb missing closing delimiter sequence: *}
