@@ -1,1 +1,1 @@
-verb_not_closed.texi:11: @verb missing close brace
+verb_not_closed.texi:11: @verb missing closing delimiter sequence: *}
