@@ -1,3 +1,8 @@
+2010-08-13  Patrice Dumas  <pertusus@free.fr>
+
+	* texi2html/texi2html.pl (close_stack): more precise error
+	message when closing @verb.  Karl report.
+
 2010-08-12  Patrice Dumas  <pertusus@free.fr>
 
 	* texi2html/texi2html.pl (prepare_htmlxref): also use the
